--- a/_includes/Daily Journal.html
+++ b/_includes/Daily Journal.html
@@ -1,17 +1,17 @@
-<!-- Team -->
+<!-- DailyJournal -->
 {% if site.locale and site.locale != "" and site.locale != nil %}
-<section class="page-section" id="{{ site.data.sitetext[site.locale].team.section | default: "team" }}">
+<section class="page-section" id="{{ site.data.sitetext[site.locale].DailyJournal.section | default: "DailyJournal" }}">
 <div class="container">
   <div class="row">
 	<div class="col-lg-12 text-center">
-	  <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].team.title }}</h2>
-	  <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].team.text }}</h3>
+	  <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].DailyJournal.title }}</h2>
+	  <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].DailyJournal.text }}</h3>
 	</div>
   </div>
   <div class="row d-flex justify-content-center">
-  {% for person in site.data.sitetext[site.locale].team.people %}
+  {% for person in site.data.sitetext[site.locale].DailyJournal.people %}
 	<div class="col-sm-4">
-	  <div class="team-member">
+	  <div class="DailyJournal-member">
 		<img class="mx-auto rounded-circle" src="{{ person.image }}" alt="">
 		<h4>{{ person.name }}</h4>
 		<p class="text-muted">{{ person.role }}</p>
@@ -30,24 +30,24 @@
   </div>
   <div class="row">
 	<div class="col-lg-8 mx-auto text-center">
-	  <div class="large text-muted">{{ site.data.sitetext[site.locale].team.subtext | markdownify }}</div>
+	  <div class="large text-muted">{{ site.data.sitetext[site.locale].DailyJournal.subtext | markdownify }}</div>
 	</div>
   </div>
 </div>
 </section>
 {% else %}
-<section class="page-section" id="{{ site.data.sitetext.team.section | default: "team" }}">
+<section class="page-section" id="{{ site.data.sitetext.DailyJournal.section | default: "DailyJournal" }}">
 	<div class="container">
 	  <div class="row">
 		<div class="col-lg-12 text-center">
-		  <h2 class="section-heading text-uppercase">{{ site.data.sitetext.team.title }}</h2>
-		  <h3 class="section-subheading text-muted">{{ site.data.sitetext.team.text }}</h3>
+		  <h2 class="section-heading text-uppercase">{{ site.data.sitetext.DailyJournal.title }}</h2>
+		  <h3 class="section-subheading text-muted">{{ site.data.sitetext.DailyJournal.text }}</h3>
 		</div>
 	  </div>
 	  <div class="row d-flex justify-content-center">
-	  {% for person in site.data.sitetext.team.people %}
+	  {% for person in site.data.sitetext.DailyJournal.people %}
 		<div class="col-sm-4">
-		  <div class="team-member">
+		  <div class="DailyJournal-member">
 			<img class="mx-auto rounded-circle" src="{{ person.image }}" alt="">
 			<h4>{{ person.name }}</h4>
 			<p class="text-muted">{{ person.role }}</p>
@@ -66,10 +66,10 @@
 	  </div>
 	  <div class="row">
 		<div class="col-lg-8 mx-auto text-center">
-		  <div class="large text-muted">{{ site.data.sitetext.team.subtext | markdownify }}</div>
+		  <div class="large text-muted">{{ site.data.sitetext.DailyJournal.subtext | markdownify }}</div>
 		</div>
 	  </div>
 	</div>
 </section>
 {% endif %}
-<!-- End Team -->
+<!-- End DailyJournal -->
