--- a/_includes/Goals.html
+++ b/_includes/Goals.html
@@ -1,19 +1,19 @@
-<!-- Services -->
+<!-- Goals, Used to be Services -->
 {% if site.locale and site.locale != "" and site.locale != nil %}
-  <section class="page-section" id="{{ site.data.sitetext[site.locale].services.section | default: "Goals" }}">
+  <section class="page-section" id="{{ site.data.sitetext[site.locale].Goals.section | default: "Goals" }}">
     <div class="container">
 	
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].services.title | default: "Goals" }}</h2>
-          {% if site.data.sitetext[site.locale].services.text %}
-		  <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].services.text }}</h3>
+          <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].Goals.title | default: "Goals" }}</h2>
+          {% if site.data.sitetext[site.locale].Goals.text %}
+		  <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].Goals.text }}</h3>
 		  {% endif %}
         </div>
       </div>
 	  
       <div class="row text-center">
-	  {% for service in site.data.sitetext[site.locale].services.list %}
+	  {% for service in site.data.sitetext[site.locale].Goals.list %}
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
@@ -33,7 +33,7 @@
 
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">{{ site.data.sitetext.services.title | default: "Goals" }}</h2>
+        <h2 class="section-heading text-uppercase">{{ site.data.sitetext.Goals.title | default: "Goals" }}</h2>
         {% if site.data.sitetext.Goals.text %}
     <h3 class="section-subheading text-muted">{{ site.data.sitetext.Goals.text }}</h3>
     {% endif %}
@@ -56,4 +56,4 @@
   </div>
 </section>
 {% endif %}
-<!-- End Services -->
+<!-- End Goals -->
