4th attempt at fixing missing 10/22/2025

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,10 +3,10 @@ layout: default
 ---
 {% include navheader.html %}
 
-{% include services.html %}
+{% include Goals.html %}
 {% include portfolio_grid.html %}
 {% include about.html %}
 {% include timeline.html %}
-{% include team.html %}
+{% include dailyJournal.html %}
 {% include clients.html %}
 {% include contact.html %}
