--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,6 +7,6 @@ layout: default
 {% include portfolio_grid.html %}
 {% include about.html %}
 {% include timeline.html %}
-{% include dailyJournal.html %}
+{% include DailyJournal.html %}
 {% include clients.html %}
 {% include contact.html %}
