changed button settings 10/24/2025

--- a/_sass/layout/_DailyJournal.scss
+++ b/_sass/layout/_DailyJournal.scss
@@ -7,9 +7,9 @@
 }
 
 .DailyJournal-link {
-  position: relative;
+  position: center;
   display: block;
-  max-width: 400px;
+  max-width: 800px;
   margin: 0 auto;
   cursor: pointer;
 }
