--- a/_sass/layout/_DailyJournal.scss
+++ b/_sass/layout/_DailyJournal.scss
@@ -7,9 +7,9 @@
 }
 
 .DailyJournal-link {
-  position: center;
+  position: relative;
   display: block;
-  max-width: 800px;
+  max-width: 400px;
   margin: 0 auto;
   cursor: pointer;
 }
