--- a/_includes/DailyJournal_modals.html
+++ b/_includes/DailyJournal_modals.html
@@ -1,5 +1,5 @@
 {% for project in site.DailyJournal %}
-<div class="portfolio-modal modal fade" id="dj{{ forloop.index }}" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="DailyJournal-modal modal fade" id="dj{{ forloop.index }}" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <!-- Close Button -->
