--- a/_includes/DailyJournal.html
+++ b/_includes/DailyJournal.html
@@ -4,12 +4,17 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].DailyJournal.title | markdownify | default: "DailyJournal" }}</h2>
-        <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].DailyJournal.text | markdownify }}</h3>
+        <h2 class="section-heading text-uppercase">
+          {{ site.data.sitetext[site.locale].DailyJournal.title | markdownify | default: "Daily Journal" }}
+        </h2>
+        <h3 class="section-subheading text-muted">
+          {{ site.data.sitetext[site.locale].DailyJournal.text | markdownify }}
+        </h3>
       </div>
     </div>
+
     <div class="row">
-	{% for project in site.DailyJournal %}
+      {% for project in site.DailyJournal %}
       <div class="col-md-4 col-sm-6 DailyJournal-item">
         <a class="DailyJournal-link" data-toggle="modal" href="#p{{ forloop.index }}">
           <div class="DailyJournal-hover">
@@ -17,14 +22,14 @@
               <i class="{{ site.data.style.DailyJournal-icon | default: "fas fa-plus fa-3x" }}"></i>
             </div>
           </div>
-          <img class="img-fluid" src="{{ project.caption.thumbnail }}" alt="">
+          <img class="img-fluid" src="{{ project.image }}" alt="{{ project.title }}">
         </a>
         <div class="DailyJournal-caption">
-          <h4>{{ project.caption.title }}</h4>
-          <p class="text-muted">{{ project.caption.subtitle }}</p>
+          <h4>{{ project.title }}</h4>
+          <p class="text-muted">{{ project.subtitle }}</p>
         </div>
       </div>
-	{% endfor %}
+      {% endfor %}
     </div>
   </div>
 </section>
@@ -33,12 +38,17 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">{{ site.data.sitetext.DailyJournal.title | markdownify | default: "DailyJournal" }}</h2>
-        <h3 class="section-subheading text-muted">{{ site.data.sitetext.DailyJournal.text | markdownify }}</h3>
+        <h2 class="section-heading text-uppercase">
+          {{ site.data.sitetext.DailyJournal.title | markdownify | default: "Daily Journal" }}
+        </h2>
+        <h3 class="section-subheading text-muted">
+          {{ site.data.sitetext.DailyJournal.text | markdownify }}
+        </h3>
       </div>
     </div>
+
     <div class="row">
-	{% for project in site.DailyJournal %}
+      {% for project in site.DailyJournal %}
       <div class="col-md-4 col-sm-6 DailyJournal-item">
         <a class="DailyJournal-link" data-toggle="modal" href="#p{{ forloop.index }}">
           <div class="DailyJournal-hover">
@@ -46,16 +56,17 @@
               <i class="{{ site.data.style.DailyJournal-icon | default: "fas fa-plus fa-3x" }}"></i>
             </div>
           </div>
-          <img class="img-fluid" src="{{ project.caption.thumbnail }}" alt="">
+          <img class="img-fluid" src="{{ project.image }}" alt="{{ project.title }}">
         </a>
         <div class="DailyJournal-caption">
-          <h4>{{ project.caption.title }}</h4>
-          <p class="text-muted">{{ project.caption.subtitle }}</p>
+          <h4>{{ project.title }}</h4>
+          <p class="text-muted">{{ project.subtitle }}</p>
         </div>
       </div>
-	{% endfor %}
+      {% endfor %}
     </div>
   </div>
 </section>
 {% endif %}
+
 {% include DailyJournal_modals.html %}
