--- a/_includes/DailyJournal_modals.html
+++ b/_includes/DailyJournal_modals.html
@@ -1,36 +1,29 @@
 {% for project in site.DailyJournal %}
-<div class="DailyJournal-modal modal fade" id="dj{{ forloop.index }}" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="portfolio-modal modal fade" id="p{{ forloop.index }}" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-      <!-- Close Button -->
       <div class="close-modal" data-dismiss="modal">
         <div class="lr">
           <div class="rl"></div>
         </div>
       </div>
-
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8">
             <div class="modal-body">
-              <!-- Journal Entry Details -->
+              <!-- Entry Details -->
               <h2 class="text-uppercase">{{ project.title }}</h2>
               <p class="item-intro text-muted">{{ project.subtitle }}</p>
-              {% if project.image %}
               <img class="img-fluid d-block mx-auto" src="{{ project.image }}" alt="{{ project.title }}">
-              {% endif %}
               <p>{{ project.description }}</p>
-
-              <!-- Close Button -->
               <button class="btn btn-primary" data-dismiss="modal" type="button">
                 <i class="fas fa-times"></i>
-                {{ site.data.sitetext[site.locale].modal.closebutton | default: "Close Entry" }}
+                Close Entry
               </button>
             </div>
           </div>
         </div>
       </div>
-
     </div>
   </div>
 </div>
