--- a/_includes/DailyJournal.html
+++ b/_includes/DailyJournal.html
@@ -1,47 +1,34 @@
-{% for project in site.DailyJournal %}
-<div
-  class="portfolio-modal modal fade"
-  id="dj{{ forloop.index }}"
-  tabindex="-1"
-  role="dialog"
-  aria-hidden="true"
->
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="close-modal" data-dismiss="modal">
-        <div class="lr"><div class="rl"></div></div>
-      </div>
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-8">
-            <div class="modal-body">
-              <!-- Entry Title -->
-              <h2 class="text-uppercase">{{ project.title }}</h2>
-              <p class="item-intro text-muted">{{ project.subtitle }}</p>
-
-              <!-- Image (if any) -->
-              {% if project.image %}
-              <img
-                class="img-fluid d-block mx-auto"
-                src="{{ project.image }}"
-                alt="{{ project.title }}"
-              />
-              {% endif %}
-
-              <!-- Actual Markdown content -->
-              <div class="journal-body">
-                {{ project.content | markdownify }}
-              </div>
-
-              <button class="btn btn-primary" data-dismiss="modal" type="button">
-                <i class="fas fa-times"></i>
-                Close Entry
-              </button>
-            </div>
-          </div>
-        </div>
+<!-- Daily Journal Section -->
+<section class="bg-light page-section" id="DailyJournal">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading text-uppercase">Daily Journal</h2>
+        <h3 class="section-subheading text-muted">
+          Everyday documentation of robot creation
+        </h3>
       </div>
     </div>
+
+    <div class="row">
+      {% for entry in site.DailyJournal %}
+      <div class="col-md-4 col-sm-6 portfolio-item">
+        <a class="portfolio-link" data-toggle="modal" href="#dj{{ forloop.index }}">
+          <div class="portfolio-hover">
+            <div class="portfolio-hover-content">
+              <i class="fas fa-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-fluid" src="{{ entry.image }}" alt="{{ entry.title }}">
+        </a>
+        <div class="portfolio-caption">
+          <h4>{{ entry.title }}</h4>
+          <p class="text-muted">{{ entry.subtitle }}</p>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
   </div>
-</div>
-{% endfor %}
+</section>
+
+{% include DailyJournal_modals.html %}
