--- a/_includes/DailyJournal.html
+++ b/_includes/DailyJournal.html
@@ -19,7 +19,11 @@
               <i class="fas fa-plus fa-3x"></i>
             </div>
           </div>
+          {% if entry.image %}
           <img class="img-fluid" src="{{ entry.image }}" alt="{{ entry.title }}">
+          {% else %}
+          <img class="img-fluid" src="assets/img/placeholder.jpg" alt="{{ entry.title }}">
+          {% endif %}
         </a>
         <div class="portfolio-caption">
           <h4>{{ entry.title }}</h4>
@@ -30,5 +34,3 @@
     </div>
   </div>
 </section>
-
-{% include DailyJournal_modals.html %}
