--- a/_includes/DailyJournal.html
+++ b/_includes/DailyJournal.html
@@ -1,4 +1,3 @@
-<!-- Daily Journal Section -->
 <section class="bg-light page-section" id="DailyJournal">
   <div class="container">
     <div class="row">
@@ -11,23 +10,23 @@
     </div>
 
     <div class="row">
-      {% for entry in site.DailyJournal %}
-      <div class="col-md-4 col-sm-6 portfolio-item">
-        <a class="portfolio-link" data-toggle="modal" href="#dj{{ forloop.index }}">
-          <div class="portfolio-hover">
-            <div class="portfolio-hover-content">
+      {% for project in site.DailyJournal %}
+      <div class="col-md-4 col-sm-6 DailyJournal-item">
+        <a class="DailyJournal-link" data-toggle="modal" href="#dj{{ forloop.index }}">
+          <div class="DailyJournal-hover">
+            <div class="DailyJournal-hover-content">
               <i class="fas fa-plus fa-3x"></i>
             </div>
           </div>
-          {% if entry.image %}
-          <img class="img-fluid" src="{{ entry.image }}" alt="{{ entry.title }}">
+          {% if project.image %}
+          <img class="img-fluid" src="{{ project.image }}" alt="{{ project.title }}">
           {% else %}
-          <img class="img-fluid" src="assets/img/placeholder.jpg" alt="{{ entry.title }}">
+          <img class="img-fluid" src="assets/img/placeholder.jpg" alt="{{ project.title }}">
           {% endif %}
         </a>
-        <div class="portfolio-caption">
-          <h4>{{ entry.title }}</h4>
-          <p class="text-muted">{{ entry.subtitle }}</p>
+        <div class="DailyJournal-caption">
+          <h4>{{ project.title }}</h4>
+          <p class="text-muted">{{ project.subtitle }}</p>
         </div>
       </div>
       {% endfor %}
