--- a/_includes/DailyJournal.html
+++ b/_includes/DailyJournal.html
@@ -3,16 +3,14 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase">Daily Journal</h2>
-        <h3 class="section-subheading text-muted">
-          Everyday documentation of robot creation
-        </h3>
+        <h3 class="section-subheading text-muted">Everyday documentation of robot creation</h3>
       </div>
     </div>
 
     <div class="row">
       {% for project in site.DailyJournal %}
       <div class="col-md-4 col-sm-6 DailyJournal-item">
-        <a class="DailyJournal-link" data-toggle="modal" href="#dj{{ forloop.index }}">
+        <a class="DailyJournal-link" href="#dj{{ forloop.index }}" data-toggle="modal">
           <div class="DailyJournal-hover">
             <div class="DailyJournal-hover-content">
               <i class="fas fa-plus fa-3x"></i>
@@ -33,3 +31,5 @@
     </div>
   </div>
 </section>
+
+{% include DailyJournal_modals.html %}
